fixed text wrap on modals

--- a/app/assets/stylesheets/visited_physicians.css
+++ b/app/assets/stylesheets/visited_physicians.css
@@ -78,3 +78,11 @@
 .modal {
   text-align: center;
 }
+
+.modal .notes-modal {
+  white-space: normal;
+}
+
+.modal .reason-modal {
+  white-space: normal;
+}
